<resources>
    <string name="app_name">LabSeet 5</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="uName">Name</string>
    <string name="password1">Password</string>
    <string name="B0">SELECT ALL</string>
    <string name="B1">ADD</string>
    <string name="B2">SIGN IN</string>
    <string name="B3">DELETE</string>
    <string name="B4">UPDATE</string>
</resources>
